--- a/index.html
+++ b/index.html
@@ -13,25 +13,72 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
 
   <!-- CSS Files Links -->
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="estilos.css">
 
   <!-- Title -->
-  <title>Simple Page</title>
+  <title>Sprint</title>
 </head>
 <body>
-  <header>
-    <h1>HTML5 Template</h1>
-  </header>
+  <div id="menu">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Quines somos</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tienda</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contactenos</a>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link" href="registro.html" id="boton_registro">Registrese</a>
+            </li>
+          </ul>
+          
+        </div>
+      </nav>
+  </div>
+  
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="img1Fe.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img2Rosa.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img3Ama.jpg" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  
 
-  <main>
-    <p>This is a simple HTML5 Template</p>
-  </main>
+  <p class="caja">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam doloremque ipsum maxime ullam accusantium dicta tempore aliquid consequatur quidem at voluptatum facilis incidunt excepturi molestias eius nisi, dolor obcaecati deserunt esse! Animi similique, harum necessitatibus sapiente perspiciatis numquam asperiores aspernatur fuga ea consectetur, repellendus vitae cumque. A asperiores architecto delectus, eius esse placeat dolore dicta rerum. Deleniti reiciendis, quo enim dolorem reprehenderit, non, deserunt eveniet optio repellat odio vel mollitia aliquam minima. Odio culpa explicabo dolor voluptas ad quidem sit ipsa distinctio
+    animi blanditiis quos minima non aliquid cum, rerum esse aperiam, amet repellat sequi porro totam unde labore. Quos!</p>
 
-  <footer>
-    <p>HTML5 Template</p>
-  </footer>
-
-  <noscript>Your browser don't support JavaScript!</noscript>
-  <script src="./scripts.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
